# chess_game

./: .gitignore  Cargo.toml  readme.md
assets/: unicodes.txt
bot_client/: Cargo.toml
bot_client/src/: main.rs
client/: Cargo.toml  readme.md
client/src/: action.rs  config.rs  input.rs  main.rs
client/src/assets/: mod.rs
client/src/assets/font/: font_id.rs  mod.rs
client/src/assets/loader/: handle.rs  loaded_data.rs  mod.rs  request.rs  resolver.rs  targets.rs
client/src/assets/sound/: mod.rs  sound_id.rs
client/src/assets/sprite/: mod.rs  sprite_id.rs
client/src/game/: mod.rs  state.rs
client/src/game/state/: connected.rs  connecting.rs  disconnected.rs  dummy.rs  game_end.rs  game_join.rs  game_leave.rs  game_start.rs  just_launched.rs  player_left.rs  playing.rs  waiting_for_opponent.rs
client/src/gui/: animation.rs  architecture.rs  mod.rs
client/src/gui/pause_menu/: config_view.rs  credits_view.rs  mod.rs
client/src/networking/: client.rs  future.rs  mod.rs  proxy.rs  stats.rs
client/src/networking/stats/: bps.rs  mod.rs  rtt.rs
client/src/render/: color.rs  draw_param.rs  layer.rs  mod.rs  render_log.rs  render_request.rs
client/src/ui/: _rect.rs  anchor.rs  draw_param.rs  element.rs  event.rs  group.rs  mod.rs  position.rs  register.rs  state.rs  style.rs  value.rs  vector.rs
client/src/ui/element/: button.rs  graph.rs  image.rs  mod.rs  text.rs  text_edit.rs
client/src/ui/style/: background.rs  border.rs  bundle.rs
client/src/ui/widget/: button.rs  graph.rs  mod.rs
client/src/utils/: framestats.rs  mod.rs
dead_code/: ui_league_text.rs
resources/internal/config/: menuArchitecture.ron  pieces_relative_moves.ron
resources/internal/sprite/: resolver.ron
scripts/: check_dependecies.py  dependency_checker.py
server/: Cargo.toml  readme.md
server/src/: main.rs  utils.rs
server/src/game/: mod.rs
server/src/game_manager/: game.rs  mod.rs  player.rs  state.rs
server/src/networking/: client.rs  error.rs  mod.rs  proxy.rs  server.rs
shared/: Cargo.toml  readme.md
shared/src/: file.rs  id.rs  lib.rs  logger.rs  mem.rs  message.rs  networking.rs  random.rs  threading.rs  time.rs
shared/src/chess/: bitboard.rs  board.rs  color.rs  mod.rs  movegen.rs  movement.rs  piece.rs  position.rs  square.rs
shared/src/error/: client.rs  server.rs
shared/src/game/: mod.rs
shared/src/maths/: mod.rs  point.rs  vec2d.rs
shared/src/maths/rect/: inner.rs  mod.rs
