[workspace]
members = [
    "client",
    "server",
    "shared"
]
exclude = [
]


[workspace.dependencies]
log = "0.4.20"
ggez = "0.9.3"
derivative = "2.2.0"
serde = { version = "1.0.188", features = ["derive"] }
hashbrown = "0.14.0"
ron = "0.8.1"
thiserror = "1.0.48"
rand = "0.8.5"
spin_sleep = "1.1.1"