[package]
name = "bot_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "bot_client"
path = "src/main.rs"

[dependencies]
shared = {path = "../shared"}
networking.workspace = true
time.workspace = true
log.workspace = true
logger.workspace = true
random.workspace = true

