[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/main.rs"


[dependencies]
chrono = "0.4.29"
fern = { version = "0.6.2", features = ["colored"] }
ggez = "0.9.3"
log = "0.4.20"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
spin_sleep = "1.1.1"
thiserror = "1.0.48"
ggegui = {git = "https://github.com/Bowarc/ggegui"}