[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/main.rs"


[dependencies]
shared = {path = "../shared"}
ggegui = {git = "https://github.com/Bowarc/ggegui"}
triple_buffer.workspace = true
ggez.workspace = true
derivative.workspace = true
serde.workspace = true
hashbrown.workspace = true
ron.workspace = true
log.workspace = true
spin_sleep.workspace = true
thiserror.workspace = true
logger.workspace = true
threading.workspace = true
networking.workspace = true
time.workspace = true
mem.workspace = true
random.workspace = true
