[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shared = {path = "../shared"}
ctrlc = "3.4.1"
spin_sleep.workspace = true
log.workspace = true
thiserror.workspace = true
logger.workspace = true
time.workspace = true
networking.workspace = true
threading.workspace = true
triple_buffer.workspace = true
random.workspace = true