[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "shared"
crate-type = ["rlib"]



[dependencies]
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path",  "debug-embed"] }
colored = "2.0.4"
thiserror.workspace = true
serde.workspace =true
ggez.workspace = true
derivative.workspace = true
log.workspace = true
rand.workspace = true
networking.workspace = true
time.workspace =true
