[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "shared"
crate-type = ["rlib"]



[dependencies]
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path", "debug-embed"] }
thiserror.workspace = true
serde.workspace = true
ggez.workspace = true
log.workspace = true
networking.workspace = true
time.workspace = true
ron.workspace = true
lazy_static = "1.4.0"
enum_variant_name.workspace = true
logger.workspace = true
